refactor(components): all compoennts refactored
components refactored using best practices to enable reuse and maintenance

BREAKING CHANGE: All components changed

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Wesley Silva" />
     <meta name="description" content="Formulário de cadastro de clientes" />
-    <link type="image/x-icon" rel="shortcut icon" href="./src/assets/logo64.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link type="image/x-icon" rel="shortcut icon" href="./src/assets/favicon.ico" />
     <title>Master Solução</title>
   </head>
   <body>
